oxiplate-derive/tests/broken/writ/closed-like-comment.stderr
error: Malformed raw string. Expected `"` after opening hashes
 --> tests/broken/writ/closed-like-comment.rs:4:27
  |
4 | #[oxiplate_inline("{{ foo #}")]
  |                           ^
